# ska-sdp-wflow-pointing-offset

./: .gitignore  .gitlab-ci.yml  CODEOWNERS  CONTRIBUTORS  Dockerfile  Makefile  README.md  pyproject.toml
docs/: requirements.txt
docs/src/: conf.py  docker.rst  index.rst
docs/src/api/: index.rst
docs/src/api/ska_sdp_wflow_pointing_offset/: array_data_func.rst  beam_fitting.rst  coord_support.rst  export_data.rst  freq_select.rst  index.rst  pointing_offset_cli.rst  read_data.rst  utils.rst  workflow.rst
src/ska-sdp-wflow-pointing-offset/: beam_fitting.py
src/ska_sdp_wflow_pointing_offset/: __init__.py  array_data_func.py  beam_fitting.py  coord_support.py  export_data.py  freq_select.py  plotting_func.py  pointing_offset_cli.py  read_data.py  utils.py  workflow.py
tests/: conftest.py  test_array_data_func.py  test_beam_fitting.py  test_coord_support.py  test_export_data.py  test_freq_select.py  test_plotting_func.py  test_read_data.py  test_temp.py  test_wflow_pointing_offset.py  test_workflow_functions.py  utils.py
tests/test_data/: .gitattributes
