[tool.poetry]
name = "ska-sdp-wflow-pointing-offset"
version = "0.1.0"
description = "SKA SDP Pointing Offset Calibration Pipeline"
authors = ["SKA SDP Developers"]
license = "BSD-3 Clause"
repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-wflow-pointing-offset"
documentation = "https://developer.skao.int/projects/ska-sdp-wflow-pointing-offset/en/latest/"

[[tool.poetry.source]]
name = "ska"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23, <1.24"
matplotlib = "^3.6"
katpoint = "^0.10"
scikits-fitting = "^0.7"
pyuvdata = "^2.2"
uncertainties = "^3.1.7"
ska-sdp-datamodels = "^0.2.1"
ska-sdp-func-python = ">=0.2.2"
docopt = "^0.6"

# optional dependencies; used by "extras"
python-casacore = {version = "^3.5", optional = true}

[tool.poetry.extras]
python-casacore = ["python-casacore"]

[tool.poetry.scripts]
pointing-offset = "ska_sdp_wflow_pointing_offset.pointing_offset_cli:main"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
build = "^0.7.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pylint = "^2.12.2"
pylint-junit = "^0.3.2"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
